--- a/site/style.css
+++ b/site/style.css
@@ -11,18 +11,76 @@ body {
 p {
   padding-bottom: 5px;
   padding-top: 5px;
+  font-family: "Open sans";
+  font-size: 17px;
+}
+
+#top-header {
+  /*position: fixed;*/
+  background-color: white;
+  color: red;
+  top: 0px;
+  left: 0px;
+  /*height: 500px;*/
+  /*width: 1540px;*/
+}
+
+  header {
+    /*position: absolute;*/
+    /*border-bottom: 3px solid #eee;*/
+    padding: 0px;
+    height: 100px;
+    width: 1540px;
+  }
+
+  header #title {
+    font-size: 50px;
+    color: black;
+    font-weight:bold;
+  }
+
+  header #slogan {
+    color: black;
+    font-size: 20px;
+    padding-left: 2px;
+  }
+
+  #links a {
+    color: black;
+    text-decoration: none;
+  }
+
+  #links a:hover {
+    color: red;
+  }
+
+  .header-image {
+    background-color: #2B2B2B;
+    background-size: cover;
+    height: 122px;
+    width: 1400px;
+    box-shadow: inset 0 0 15px rgba(0,0,0,.5);
+  }
+
+#intro {
+  padding-top: 10px;
 }
 
 
 section {
+  font-family: "Open sans";
+  font-size: 17px;
   padding-top: 10px;
 }
+
 
 h2 {
   padding-top: 10px;
-}
-
-header {
+  border-left: 5px solid #eee;
+  color: #444;
+  font-weight: bold;
+  padding-left: 10px;
+  font-size: 25px;
 }
 
 .axis {
