--- a/site/style.css
+++ b/site/style.css
@@ -207,3 +207,11 @@ h2 {
 pre, code {
   font-family: "Menlo";
 }
+
+footer {
+  color: grey;
+  font-size: 12px;
+  text-align: right;
+  padding-top: 40px;
+}
+
